--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,8 +13,8 @@
             android:id="@+id/action_splashFragment_to_launchFragment"
             app:destination="@id/launchFragment" />
         <action
-            android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_splashFragment_to_initialFragment"
+            app:destination="@id/initialFragment" />
     </fragment>
     <fragment
         android:id="@+id/launchFragment"
@@ -28,8 +28,8 @@
             android:id="@+id/action_launchFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_launchFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_launchFragment_to_initialFragment"
+            app:destination="@id/initialFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -40,8 +40,8 @@
             android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
             app:destination="@id/forgotPasswordFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
+            android:id="@+id/action_loginFragment_to_initialFragment"
+            app:destination="@id/initialFragment"
             app:popUpTo="@+id/launchFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -138,5 +138,22 @@
             app:destination="@id/launchFragment"
             app:popUpTo="@+id/launchFragment"
             app:popUpToInclusive="true" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.fitnessapp.feature.home.profile.view.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/initialFragment"
+        android:name="com.example.fitnessapp.feature.home.initial.view.InitialFragment"
+        android:label="InitialFragment" >
+        <action
+            android:id="@+id/action_initialFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_initialFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
 </navigation>
