--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,5 +26,9 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:buttonStyle">@drawable/button_shape</item>
     </style>
+    <!--Bottom navigation bar style-->
+    <style name="BottomNavigationViewStyle" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:background">@color/accent</item>
+    </style>
 
 </resources>
