--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,18 +5,107 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="32dp"
+    android:padding="16dp"
     tools:context=".feature.home.home.view.HomeFragment">
 
-    <TextView
-        android:id="@+id/home_tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOME PAGE"
-        android:textSize="32sp"
+    <ImageView
+        android:id="@+id/home_iv_top"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:scaleType="fitStart"
+        android:src="@drawable/diet_exrcs"
+        app:layout_constraintBottom_toTopOf="@+id/home_left_column"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Sol Sütun -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/home_left_column"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/accent"
+        app:layout_constraintBottom_toTopOf="@id/home_btn_out"
+        app:layout_constraintEnd_toStartOf="@+id/home_guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/home_iv_top">
+
+        <ImageView
+            android:id="@+id/home_left_iv"
+            android:layout_width="166dp"
+            android:layout_height="152dp"
+            android:src="@drawable/main_exercises"
+            app:layout_constraintBottom_toTopOf="@+id/home_left_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/home_left_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="Exercises"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_left_iv" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Sağ Sütun -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/home_right_column"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="4dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/accent"
+        android:padding="12dp"
+        app:layout_constraintBottom_toTopOf="@id/home_btn_out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/home_left_column"
+        app:layout_constraintTop_toBottomOf="@id/home_iv_top">
+
+        <ImageView
+            android:id="@+id/home_right_iv"
+            android:layout_width="157dp"
+            android:layout_height="152dp"
+            android:src="@drawable/diet_list"
+            app:layout_constraintBottom_toTopOf="@+id/home_right_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/home_right_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="Diet List"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_right_iv" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!-- Guideline -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/home_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <Button
         android:id="@+id/home_btn_out"
@@ -27,7 +116,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/home_left_column"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
